third_party/WebKit/Source/core/dom/ContainerNode.cpp
@@ -1049,8 +1049,13 @@ bool ContainerNode::GetUpperLeftCorner(FloatPoint& point) const {
   // calculate the scroll position, we must be at the end of the
   // document. Scroll to the bottom.
   // FIXME: who said anything about scrolling?
-  if (!runner && GetDocument().View()) {
-    point = FloatPoint(0, GetDocument().View()->ContentsHeight());
+  if (!runner && GetDocument().View() &&
+      GetDocument().View()->LayoutViewportScrollableArea()) {
+    point = FloatPoint(0, GetDocument()
+                              .View()
+                              ->LayoutViewportScrollableArea()
+                              ->ContentsSize()
+                              .Height());
     return true;
   }
   return false;
