third_party/WebKit/Source/core/editing/finder/TextFinder.cpp
@@ -615,9 +615,9 @@ void TextFinder::ClearFindMatchesCache() {
 }
 
 void TextFinder::UpdateFindMatchRects() {
-  IntSize current_contents_size = OwnerFrame().ContentsSize();
-  if (contents_size_for_current_find_match_rects_ != current_contents_size) {
-    contents_size_for_current_find_match_rects_ = current_contents_size;
+  IntSize current_document_size = OwnerFrame().DocumentSize();
+  if (document_size_for_current_find_match_rects_ != current_document_size) {
+    document_size_for_current_find_match_rects_ = current_document_size;
     find_match_rects_are_valid_ = false;
   }
 
