third_party/WebKit/Source/core/editing/finder/TextFinderTest.cpp
@@ -322,6 +322,16 @@ TEST_F(TextFinderTest, ScopeTextMatchesSimple) {
   ASSERT_EQ(2u, match_rects.size());
   EXPECT_EQ(FindInPageRect(text_node, 4, text_node, 10), match_rects[0]);
   EXPECT_EQ(FindInPageRect(text_node, 14, text_node, 20), match_rects[1]);
+
+  // Modify the document size and ensure the cached match rects are recomputed
+  // to reflect the updated layout.
+  GetDocument().body()->setAttribute(HTMLNames::styleAttr, "margin: 2000px");
+  GetDocument().UpdateStyleAndLayout();
+
+  GetTextFinder().FindMatchRects(match_rects);
+  ASSERT_EQ(2u, match_rects.size());
+  EXPECT_EQ(FindInPageRect(text_node, 4, text_node, 10), match_rects[0]);
+  EXPECT_EQ(FindInPageRect(text_node, 14, text_node, 20), match_rects[1]);
 }
 
 TEST_F(TextFinderTest, ScopeTextMatchesRepeated) {
